<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sesion_part"
        android:foregroundTint="#882626"
        android:padding="4dp"
        android:text="@string/tvTitulo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/etDocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/input"
        android:ems="10"
        android:hint="@string/etDocumentos"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/wey"
        tools:ignore="ExtraText" />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/input"
        android:ems="10"
        android:hint="@string/etNombres"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/wey" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/input"
        android:ems="10"
        android:hint="@string/etApellidos"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/wey" />


    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/input"
        android:ems="10"
        android:hint="@string/etUsuario"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/wey" />

    <EditText
        android:id="@+id/etContra"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="@color/input"
        android:ems="10"
        android:hint="@string/etContra"
        android:inputType="textPassword"
        android:textColorHint="@color/wey" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnRegistar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnCrear"
            android:text="@string/btnRegistrar"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnListar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bntListar"
            android:text="@string/btnListar"
            android:textColor="@color/white"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnActualizar"
            android:text="Actualizar Usuario"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnEliminar"
            android:text="Eliminar Usuario"
            android:layout_weight="1"/>

    </TableRow>

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnLimpiar"
        android:text="@string/btnLimpiar"
        android:textColor="@color/white" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Buscar por documento"
        android:textColor="@color/wey"
        android:textSize="24sp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnBuscar"
        android:onClick="searchUser"
        android:text="Buscar"
        />

    </TableRow>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:stretchColumns="*">

            <!-- Encabezados de las columnas -->
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Documento"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Usuario"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Nombres"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Apellidos"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Contraseña"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>
    </ScrollView>


</LinearLayout>